--- a/mushrooms_classification/mushrooms_classification.ipynb
+++ b/mushrooms_classification/mushrooms_classification.ipynb
@@ -2,25 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "%matplotlib inline"
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +251,7 @@
        "[6 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +272,7 @@
        "(8124, 23)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,8 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labelEncoder = preprocessing.LabelEncoder()\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -308,8 +308,8 @@
      "output_type": "stream",
      "text": [
       "The accuracy of SVC_rbf is: 1.0\n",
-      "The accuracy of SVC_linear is: 0.976\n",
-      "The accuracy of Logistic Regression is: 0.955076923077\n"
+      "The accuracy of SVC_linear is: 0.973538461538\n",
+      "The accuracy of Logistic Regression is: 0.959384615385\n"
      ]
     }
    ],
