--- a/SVM/SVM.ipynb
+++ b/SVM/SVM.ipynb
@@ -11,7 +11,7 @@
     "<h3>When to use it?</h3> With complex but small or medium size datasets.\n",
     "\n",
     "<h3>How it works?</h3>\n",
-    "<img src=\"svm.png\"></img><br>\n",
+    "<img src=\"img/svm.png\"></img><br>\n",
     "Sometimes, although our classes are linearly separable, methods like Linear Regression may not work properly.\n",
     "SVM classifier not only separates the classes, but also stays as far away from the closest training instances as possible.<br><br>\n",
     "The space divided by the SVM's line is called <b>Large Margin Classifier</b>:\n",
@@ -87,7 +87,7 @@
     "- purple: hinge loss function\n",
     "- yellow: logistic loss function\n",
     "- blue: 0–1 indicator function\n",
-    "<img src=\"loss_functions.png\"></img>"
+    "<img src=\"img/loss_functions.png\"></img>"
    ]
   },
   {
