--- a/decision_trees/decision_trees.ipynb
+++ b/decision_trees/decision_trees.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "<b>How they work?</b>\n",
     "<p><i>http://scikit-learn.org/stable/modules/tree.html</i></p>\n",
-    "<img src=\"img/iris.svg\" width=\"800\" height=\"900\"></img>\n",
+    "<img src=\"img/iris.png\" width=\"800\" height=\"900\"></img>\n",
     "\n",
     "<p>As you can see, Decision Trees are very easy to understand: you start at the root node and then you move down, left or right, according to the condition, until you reach one prediction.</p>\n",
     "\n",
